# package-template

./: .gitattributes  .gitmodules  .yarnrc.yml  Cargo.toml  README.md  app.js  browser.js  common.js  index.css  index.d.ts  index.html  index.js  package-template.wasi-browser.js  package-template.wasi.cjs  package.json  simple-test.js  tsconfig.json
.cargo/: config  config.toml
.github/workflows/: CI.yaml  CI.yml  auto-merge.yaml  lint.yml
__test__/: index.spec.js  index.spec.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: upload-to-release.js
src/: aws_client.rs  flowstate_client.rs  flowstate_env.rs  function_registration.rs  lambda_middleware.rs  lib.rs  linked_daal.rs  main  main.rs  utils.rs
src/lambda_middleware/: flowstate_service_fn.rs
test/: index.test.ts
