[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name    = "napi-package-template"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi        = "3.0.0-beta"
napi-derive = "3.0.0-beta"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
